# blogsite

./: .gitignore  Cargo.toml  README.md
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: b05j4ysam68l6cyanc7akd323p3h0b5b-source  ivqavx0cfhgrqj2h75psrqwql66cx4hl-source
src/: frontmatter.rs  lib.rs  main.rs
src/routes/: handle_404.rs
templates/: base.html  blog.html  index.html
