[package]
name = "blogsite"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["serde"] }
comrak = "0.35.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
uuid = { version = "1.13.1", features = ["serde", "v4"] }

[dev-dependencies]
anyhow = "1"
